Hide private information

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 # 文件服务器地址
-file_server_addr=10.253.117.139:80
+file_server_addr=xx.xx.xx.xx:80
 # 最大连接数 并发量较大的话可加大该连接数
 max_storage_connection=8
 
@@ -14,4 +14,4 @@ fastdfs.http_tracker_http_port=80
 
 # fastdfs.tracker_servers=10.0.11.201:22122,10.0.11.202:22122,10.0.11.203:22122
 #fastdfs.tracker_servers=${tracker_server_addr}:22122
-fastdfs.tracker_servers=10.253.117.139:22122
+fastdfs.tracker_servers=xx.xx.xx.xx:22122
